database patch for most sold 1

--- a/backup/.env
+++ b/backup/.env
@@ -1,2 +1,2 @@
-MONGODB_URI=mongodb+srv://appuser:appuser@cluster0.dgrqmgc.mongodb.net/hwTest
+MONGODB_URI=mongodb+srv://appuser:appuser@cluster0.dgrqmgc.mongodb.net/hw-db
 JWT_SECRET=hollywoodnorthautoparts
